Two core time series data structures have been added.

--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,8 @@
           <archive>
             <manifest>
               <!-- What is the Main-Class to run? -->
-              <mainClass>de.bitocean.crunchts.simple.ConvertTSBucket</mainClass>
+              <!-- >mainClass>de.bitocean.crunchts.simple.ConvertTSBucket</mainClass-->
+              <mainClass>de.bitocean.crunchts.simple.ExtractEventTimeSeriesFromTSBucket</mainClass>
             </manifest>
           </archive>
         </configuration>
