--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
   <url>http://maven.apache.org</url>
   <properties>
     <hadoopclient.version>2.0.0-cdh4.5.0</hadoopclient.version>
+    <sesame.version>2.7.1</sesame.version>
     <httpclient.version>3.1</httpclient.version>
     <avro.version>1.7.4</avro.version>
     <crunch.version>0.9.0-hadoop2</crunch.version>
@@ -58,6 +59,54 @@
 	  <artifactId>mahout-core</artifactId>
 	  <version>0.7</version>
     </dependency>
+
+<dependency>
+  <groupId>org.openrdf.sesame</groupId>
+  <artifactId>sesame-runtime</artifactId>
+  <version>${sesame.version}</version>
+</dependency>
+
+<dependency>
+  <groupId>org.openrdf.sesame</groupId>
+  <artifactId>sesame-repository-sail</artifactId>
+  <version>${sesame.version}</version>
+</dependency>
+<dependency>
+  <groupId>org.openrdf.sesame</groupId>
+  <artifactId>sesame-sail-memory</artifactId>
+  <version>${sesame.version}</version>
+</dependency>
+
+<dependency>
+  <groupId>org.openrdf.sesame</groupId>
+  <artifactId>sesame-sail-nativerdf</artifactId>
+  <version>${sesame.version}</version>
+</dependency>
+
+<dependency>
+  <groupId>org.openrdf.sesame</groupId>
+  <artifactId>sesame-rio-rdfxml</artifactId>
+  <version>${sesame.version}</version>
+</dependency>
+<dependency>
+  <groupId>org.openrdf.sesame</groupId>
+  <artifactId>sesame-rio-turtle</artifactId>
+  <version>${sesame.version}</version>
+</dependency>
+
+<dependency>
+  <groupId>org.openrdf.sesame</groupId>
+  <artifactId>sesame-repository-http</artifactId>
+  <version>${sesame.version}</version>
+</dependency>
+
+<dependency> 
+  <groupId>org.openrdf.sesame</groupId> 
+  <artifactId>sesame-repository-sparql</artifactId> 
+  <version>${sesame.version}</version> 
+</dependency>
+
+
   </dependencies>
   <build>
     <plugins>
@@ -112,5 +161,38 @@
         </configuration>
       </plugin>
     </plugins>
-  </build>
+  </build> 
+<repositories>
+
+    <repository>
+      <id>cloudera</id>
+      <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
+    </repository>
+
+ 
+  
+    
+    <repository>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+      <id>central</id>
+      <name>Maven Repository Switchboard</name>
+      <url>http://repo1.maven.org/maven2</url>
+    </repository>
+  </repositories>
+  <pluginRepositories>
+    <pluginRepository>
+      <releases>
+        <updatePolicy>never</updatePolicy>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+      <id>central</id>
+      <name>Maven Plugin Repository</name>
+      <url>http://repo1.maven.org/maven2</url>
+    </pluginRepository>
+  </pluginRepositories>
+ 
 </project>
