--- a/pom.xml
+++ b/pom.xml
@@ -3,15 +3,16 @@
   <groupId>de.bitocean</groupId>
   <artifactId>crunchTS</artifactId>
   <packaging>jar</packaging>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.2-SNAPSHOT</version>
   <name>crunchTS</name>
   <url>http://maven.apache.org</url>
   <properties>
-    <hadoopclient.version>2.0.0-cdh4.5.0</hadoopclient.version>
+    <!--hadoopclient.version>2.0.0-cdh4.5.0</hadoopclient.version-->
+    <hadoopclient.version>2.3.0-cdh5.1.3</hadoopclient.version>
     <sesame.version>2.7.1</sesame.version>
     <httpclient.version>3.1</httpclient.version>
     <avro.version>1.7.4</avro.version>
-    <crunch.version>0.9.0-hadoop2</crunch.version>
+    <crunch.version>0.11.0-hadoop2</crunch.version>
     <guava.version>11.0.2</guava.version>
     <commonscodec.version>1.6</commonscodec.version>
     <maveneclipse.version>2.9</maveneclipse.version>
